--- a/Lectures/Week05_ANOVAI_lecture.Rmd
+++ b/Lectures/Week05_ANOVAI_lecture.Rmd
@@ -78,58 +78,115 @@ accent3 <- '#19424C'
 + When you run multiple tests when a single test would do, you're inflating the risk of making a Type I error.
 
 ---
-### Types of ANOVA
+### Basic ANOVA requirements
 
-+ ANOVAs can be used to compare more than two means. 
++ ANOVAs can be used to compare more than two means at once 
 
-  + **One-Way ANOVA** test for differences between 3 or more independent means
-  
-  + **Repeated-Measures ANOVA** test for differences in a single sample at 3 or more timepoints or conditions
-  
-  + **Multiway ANOVA** tests for differences between multiple means across multiple independent variables
-
---
-
-+ Because of this, all ANOVAs require:
++ All ANOVAs require:
 
   + A continuous dependent variable
   
   + At least one categorical independent variable with three or more levels
 
+
 ---
-### One-Way ANOVA
+### Types of ANOVA
 
-+ Compare the mean of the dependent variable across multiple levels of a single independent variable
++ **One-Way ANOVA** test for differences between 3 or more independent means
+  
++ **Factorial ANOVA** tests for differences between multiple means across multiple independent variables (AKA multiway ANOVA)
+  
++ Both of these could also be a **Repeated-Measures ANOVA**, which tests for differences within a single sample
 
-+ Each level of the independent variable reflects an independent sample
+--
+
+<br>
+
+| IVs | Between-Subjects IV             | Within-Subjects IV               | Both Between & Within IV(s) |
+|:---:|:-------------------------------:|:--------------------------------:|:---------------------------:|
+| 1   | Between-Subjects One-Way ANOVA  | Repeated-Measures One-Way ANOVA  | N/A                         |
+| 2+  | Between-Subjects Factorial ANOVA| Repeated-Measures Factorial ANOVA| Mixed Factorial ANOVA       |
+
+
+---
+### One Way ANOVAs
+
+.pull-left[
+.center[**Between-Subjects One-Way ANOVA**]
++ Compares the mean of the DV across multiple levels of a single IV
+
++ Each level of the IV is collected from a separate sample
+
++ Results indicate whether there is a difference between at least one pair of levels
+]
+
+---
+count: false
+### One Way ANOVAs
+
+.pull-left[
+.center[**Between-Subjects One-Way ANOVA**]
++ Compares the mean of the DV across multiple levels of a single IV
+
++ Each level of the IV is collected from a separate sample
 
 + Results indicate whether there is a difference between at least one pair of levels
 
+<br>
+
+<b><p style="color:#9AD079;">Example research question:</b></p>
+  
+When revising content, is it most effective to read the notes, rewrite the notes, or test yourself on the material?
+]
+
 --
 
-+ **Example research questions:** 
+.pull-right[
+.center[**Repeated-Measures One-Way ANOVA**]
++ Compare the mean of the DV across multiple levels of a single IV
 
-  + Is there a difference in the weekly hours of exercise of participants who exercise in a gym, outside, or in their home?
-  
-  + When revising content, is it most effective to read the notes, rewrite the notes, or test yourself on the material?
++ Each member of the sample provides data for *all* levels of the independent variable
+
++ Results indicate whether there is a difference between at least one pair of levels, but these levels are measured within the same sample
+
+]
 
 ---
-### Repeated-Measures ANOVA
+count: false
+### One Way ANOVAs
 
-+ Compare the mean of the dependent variable across multiple levels of a single independent variable
+.pull-left[
+.center[**Between-Subjects One-Way ANOVA**]
++ Compares the mean of the DV across multiple levels of a single IV
 
-+ Each member of the sample provided data for all levels of the independent variable
++ Each level of the IV is collected from a separate sample
 
-+ Results indicate whether there is a difference between at least one pair of levels (but these levels are measured within the same sample)
++ Results indicate whether there is a difference between at least one pair of levels
 
---
+<br>
 
-+ **Example research questions:**
-
-  + Are there differences in the number of cigarettes one smokes per day at baseline, midway through, and after completion of a smoking cessation programme?
+<b><p style="color:#9AD079;">Example research question:</b></p>
   
-  + Does one's depression severity (as measured by BDI scores) change across the seasons?
-  
+When revising content, is it most effective to read the notes, rewrite the notes, or test yourself on the material?
+]
+
+.pull-right[
+.center[**Repeated-Measures One-Way ANOVA**]
++ Compare the mean of the DV across multiple levels of a single IV
+
++ Each member of the sample provides data for *all* levels of the independent variable
+
++ Results indicate whether there is a difference between at least one pair of levels, but these levels are measured within the same sample
+
+<b><p style="color:#9AD079;">Example research question:</b></p>
+Are there differences in the number of cigarettes one smokes per day at baseline, midway through, and after completion of a smoking cessation programme?
+
+]
+
+---
+class: center, middle, inverse
+
+### Questions?
 
 ---
 ### ANOVA
@@ -148,27 +205,26 @@ accent3 <- '#19424C'
 
 .pull-left[
 
-+ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
++ When no further information is available, the best reflection of the DV as a whole is the mean. 
 
-<br>
-<br>
-<br>
-<br>
-```{r, echo = F, fig.width=5, fig.height=2.75}
+]
+
+.pull-right.center[**Base Mean Model**
+```{r, echo = F, fig.width=6, fig.height=3}
 set.seed(526)
-dat <- data.frame(IV = c(rep('Group A', 4), rep('Group B', 4), rep('Group C', 4)),
+dat <- data.frame(IV = c(rep('A', 4), rep('B', 4), rep('C', 4)),
                   DV = c(rnorm(4, mean = 15, sd = 3), rnorm(4, mean = 18, sd = 3), rnorm(4, mean = 12, sd = 3)),
                   ID = 1:12)
 
-
 (basePlot <- ggplot(dat, aes(ID, DV)) + geom_point() +
-    labs(x = 'Participant', y = 'Dependent Variable') +
+    labs(x = 'Participant', y = 'DV: Cortisol Level') +
   scale_x_continuous(breaks = seq(1, 12, 1)) + 
     geom_hline(yintercept = mean(dat$DV), linewidth = 1) +
     theme(axis.text = element_text(size = 8),
-          axis.title = element_text(size = 8, face = 'bold')))
+          axis.title = element_text(size = 12, face = 'bold'),
+          axis.text.y = element_blank(),
+          axis.ticks.y = element_blank()))
 ```
-
 ]
 
 
@@ -178,16 +234,15 @@ count: false
 ### The Logic Behind ANOVA
 
 .pull-left[
-
-+ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
++ When no further information is available, the best reflection of the DV as a whole is the mean. 
 
 + The mean represents some individuals well, but not others. 
+]
 
+.pull-right.center[**Base Mean Model**
+```{r, echo = F, fig.width=6, fig.height=3}
 
-<br>
-```{r, echo = F, fig.width=5, fig.height=2.75}
-
-basePlot +  
+basePlot +
   geom_segment(aes(x = ID, y = DV, xend = ID, yend = mean(DV)), lty = 2)
 ```
 ]
@@ -197,43 +252,40 @@ basePlot +
 
 .pull-left[
 
-+ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
++ When no further information is available, the best reflection of the DV as a whole is the mean. 
 
 + The mean represents some individuals well, but not others. 
 
-<br>
-```{r, echo = F, fig.width=5, fig.height=2.75}
++ Researchers often want to know whether another variable will help them more accurately capture variation in the DV
+]
+
+.pull-right.center[**Base Mean Model**
+```{r, echo = F, fig.width=6, fig.height=3}
 
 basePlot +  
   geom_segment(aes(x = ID, y = DV, xend = ID, yend = mean(DV)), lty = 2)
 ```
-]
 
-.pull-right[
-
-+ Often, researchers are testing whether they can more accurately capture variation in the dependent variable using the independent variable(s).
-
-<br>
-<br>
-<br>
-<br>
-```{r, echo = F, fig.width=5, fig.height=2.75, warning = F}
-plotDat <- data.frame(y = c(mean(dat$DV[dat$IV=='Group A']), mean(dat$DV[dat$IV=='Group B']), mean(dat$DV[dat$IV=='Group C'])))
+**Model with IV**
+```{r, echo = F, fig.width=6, fig.height=3, warning = F}
+plotDat <- data.frame(y = c(mean(dat$DV[dat$IV=='A']), mean(dat$DV[dat$IV=='B']), mean(dat$DV[dat$IV=='C'])))
 
 (groupPlot <- basePlot + geom_point(data = dat, aes(color = IV)) +
-  scale_color_manual(values = c(baseColor, accent1, accent2)) +
+    labs(color = 'IV: Job') +
+  scale_color_manual(labels = c('Software Engineer', 'Surgeon', 'Librarian'),
+                     values = c(baseColor, accent1, accent2)) +
   geom_segment(aes(x = 1, y = plotDat$y[1], xend = 4, yend = plotDat$y[1]),
                col = baseColor, linewidth = 1) +
   geom_segment(aes(x = 5, y = plotDat$y[2], xend = 8, yend = plotDat$y[2]),
                col = accent1, linewidth = 1) +
   geom_segment(aes(x = 9, y = plotDat$y[3], xend = 12, yend = plotDat$y[3]),
                col = accent2, linewidth = 1) +
-  theme(legend.position = c(.85, .78),
-        legend.text = element_text(size = 8),
-        legend.title = element_blank()))
+  theme(legend.position = c(.83, .78),
+        legend.text = element_text(size = 10),
+        legend.title = element_text(face = 'bold')))
 ```
-
 ]
+
 
 
 ---
@@ -241,28 +293,29 @@ plotDat <- data.frame(y = c(mean(dat$DV[dat$IV=='Group A']), mean(dat$DV[dat$IV=
 
 .pull-left[
 
-+ When you have no further information, the best reflection of the dependent variable as a whole is the mean. 
++ When no further information is available, the best reflection of the DV as a whole is the mean. 
 
 + The mean represents some individuals well, but not others. 
 
-<br>
-```{r, echo = F, fig.width=5, fig.height=2.75}
++ Researchers often want to know whether another variable will help them more accurately capture variation in the DV
+
++ ANOVAs test whether the IV does a significantly better job than the mean of modeling variance in the DV
+
+]
+
+.pull-right.center[**Base Mean Model**
+```{r, echo = F, fig.width=6, fig.height=3}
 
 basePlot +  
   geom_segment(aes(x = ID, y = DV, xend = ID, yend = mean(DV)), lty = 2)
 ```
-]
 
-.pull-right[
-
-+ Often, researchers are testing whether they can more accurately capture variation in the dependent variable using the independent variable(s).
-
-+ ANOVAs test whether the IV does a significantly better job than the mean of modeling variance in the DV
-
-
-```{r, echo = F, fig.width=5, fig.height=2.75, warning = F}
+**Model with IV**
+```{r, echo = F, fig.width=6, fig.height=3, warning = F}
 basePlot + geom_point(data = dat, aes(color = IV)) +
-  scale_color_manual(values = c(baseColor, accent1, accent2)) +
+    labs(color = 'IV: Job') +
+  scale_color_manual(labels = c('Software Engineer', 'Surgeon', 'Librarian'),
+                     values = c(baseColor, accent1, accent2)) +
   geom_segment(aes(x = 1, y = plotDat$y[1], xend = 4, yend = plotDat$y[1]),
                col = baseColor, linewidth = 1) +
   geom_segment(aes(x = 5, y = plotDat$y[2], xend = 8, yend = plotDat$y[2]),
@@ -270,12 +323,13 @@ basePlot + geom_point(data = dat, aes(color = IV)) +
   geom_segment(aes(x = 9, y = plotDat$y[3], xend = 12, yend = plotDat$y[3]),
                col = accent2, linewidth = 1) +
   geom_segment(aes(x = ID, y = DV, xend = ID, yend = c(rep(plotDat$y[1], 4), rep(plotDat$y[2], 4), rep(plotDat$y[3], 4)), color = dat$IV), lty = 2) +
-  theme(legend.position = c(.85, .78),
-        legend.text = element_text(size = 8),
-        legend.title = element_blank())
+  theme(legend.position = c(.83, .78),
+        legend.text = element_text(size = 10),
+        legend.title = element_text(face = 'bold'))
 ```
-
 ]
+
+
 
 ---
 ### The Logic Behind ANOVA
@@ -286,30 +340,29 @@ $$F = \frac{MS_{model}}{MS_{residual}}$$
 + ANOVAs produce an $F$-statistic that is the ratio of the variation in the DV explained by our IV(s) and the variation explained by other unmeasured factors.
 
 
-+ $MS_{model} = \frac{SS_{model}}{df_{model}}$ - reflects the variation in DV explained by the IV
++ $MS_{model}$ - reflects the variation in DV explained by the IV
 
   + AKA $MS_{between}$ or $MS_{treatment}$
 
-+ $MS_{residual} = \frac{SS_{residual}}{df_{residual}}$ - reflects the variation in DV unexplained by IV
++ $MS_{residual}$ - reflects the variation in DV unexplained by IV
 
   + AKA $MS_{within}$ or $MS_{error}$
-
---
-
-+ Recall the sum of squared deviations from the [standard deviation calculation in Week 1](https://mtruelovehill.github.io/PRM/Lectures/Week01_ExploringData_Lecture.html#37). 
-
-+ Here, the sums of squares (SS) is once again referring to a sum of squared distances between values.
 
 ---
 ### The Logic Behind ANOVA
 
++ To know how much variation in the DV can be explained by the IV ($MS_{model}$), we need to understand how much better our IV model does compared to the mean model.
+
+--
+
++ This can be captured through the model sum of squares, $SS_{model}$:
 
 .pull-left[
-.center[** $SS_{model}$ **
-
-```{r, echo = F, fig.height=2.75, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 (SSmodelPlot <- basePlot + geom_point(data = dat, aes(color = IV)) +
-  scale_color_manual(values = c(baseColor, accent1, accent2)) +
+    labs(color = 'IV: Job') +
+  scale_color_manual(labels = c('Software Engineer', 'Surgeon', 'Librarian'),
+                     values = c(baseColor, accent1, accent2)) +
   geom_segment(aes(x = 1, y = plotDat$y[1], xend = 4, yend = plotDat$y[1]),
                col = baseColor, linewidth = 1) +
   geom_segment(aes(x = 5, y = plotDat$y[2], xend = 8, yend = plotDat$y[2]),
@@ -317,27 +370,40 @@ $$F = \frac{MS_{model}}{MS_{residual}}$$
   geom_segment(aes(x = 9, y = plotDat$y[3], xend = 12, yend = plotDat$y[3]),
                col = accent2, linewidth = 1) +
   geom_segment(aes(x = ID, y = mean(DV), xend = ID, yend = c(rep(plotDat$y[1], 4), rep(plotDat$y[2], 4), rep(plotDat$y[3], 4)), color = dat$IV), lty = 2, linewidth = 1) +
-  theme(legend.position = c(.85, .78),
-        legend.text = element_text(size = 8),
-        legend.title = element_blank()))
+  theme(legend.position = c(.83, .78),
+        legend.text = element_text(size = 12),
+        legend.title = element_text(face = 'bold')))
 ```
-]
-
-+ Difference between grand mean and IV group means of the DV
-
-+ Reflects the variance in the DV explained by IV over and above the mean
-
-
 ]
 
 --
 
 .pull-right[
-.center[ ** $SS_{residual}$ **
++ Difference between grand mean and mean of each IV group
 
-```{r, echo = F, fig.height=2.75, fig.width = 4.5, warning = F}
++ Reflects the variance in the DV explained by IV over and above the mean
+]
+
+
+---
+### The Logic Behind ANOVA
+
++ It's also important to understand how accurately the IV captures individual participant data ($MS_{residual}$).
+
+--
+
++ This is captured through the residual sum of squares, $SS_{residual}$:
+
+
+--
+
+.pull-left[
+
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 (SSresidPlot <- basePlot + geom_point(data = dat, aes(color = IV)) +
-  scale_color_manual(values = c(baseColor, accent1, accent2)) +
+    labs(color = 'IV: Job') +
+  scale_color_manual(labels = c('Software Engineer', 'Surgeon', 'Librarian'),
+                     values = c(baseColor, accent1, accent2)) +
   geom_segment(aes(x = 1, y = plotDat$y[1], xend = 4, yend = plotDat$y[1]),
                col = baseColor, linewidth = 1) +
   geom_segment(aes(x = 5, y = plotDat$y[2], xend = 8, yend = plotDat$y[2]),
@@ -345,18 +411,46 @@ $$F = \frac{MS_{model}}{MS_{residual}}$$
   geom_segment(aes(x = 9, y = plotDat$y[3], xend = 12, yend = plotDat$y[3]),
                col = accent2, linewidth = 1) +
   geom_segment(aes(x = ID, y = DV, xend = ID, yend = c(rep(plotDat$y[1], 4), rep(plotDat$y[2], 4), rep(plotDat$y[3], 4)), color = dat$IV), lty = 2, linewidth = 1) +
-  theme(legend.position = c(.85, .78),
-        legend.text = element_text(size = 8),
-        legend.title = element_blank()))
+  theme(legend.position = c(.83, .78),
+        legend.text = element_text(size = 12),
+        legend.title = element_text(face = 'bold')))
 ```
 ]
 
-+ Difference between IV group means of the DV and the observed data
+.pull-right[
++ Difference between IV group means and the observed data
 
-+ Reflects the amount of variation left unexplained by the IV
++ Reflects the amount of variation in the DV not explained by the IV
 ]
 
 ---
+### The Logic Behind ANOVA
+
++ Because results may be biased depending on the number of observations used to calculate them, the $SS$ values must be adjusted by sample size and number of IVs in the model. 
+
++ This standardization is done by dividing $SS$ by the degrees of freedom:
+
+  + $MS_{model} = \frac{SS_{model}}{df_{model}}$
+  
+  + $MS_{residual} = \frac{SS_{residual}}{df_{residual}}$
+
++ To summarise, the $F$ statistic of an ANOVA is the standardised ratio of the variance in the DV explained by the IV to the variance in the DV unexplained by the IV.
+
+  + In other words, the ratio of what our IV tells us about the DV to what it doesn't.
+
+---
+class: inverse, middle, center
+
+### Questions?
+
+---
+### Calculating $F$
+.pull-left[
+$$F = \frac{{MS_{model}}}{MS_{residual}}$$
+]
+
+---
+count: false
 ### Calculating $F$
 
 .pull-left[
@@ -369,16 +463,16 @@ $MS_{model} = \frac{\color{#4CA384}{SS_{model}}}{df_{model}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 dat$compMean <- NA
 
 for(x in 1:nrow(dat)) {
-  if(dat$IV[x] =='Group A') {
-    dat$compMean[x] <- mean(dat$DV[dat$IV=='Group A'])
-  } else if(dat$IV[x] =='Group B') {
-    dat$compMean[x] <- mean(dat$DV[dat$IV=='Group B'])
-  } else if (dat$IV[x] =='Group C') {
-    dat$compMean[x] <- mean(dat$DV[dat$IV=='Group C'])
+  if(dat$IV[x] =='A') {
+    dat$compMean[x] <- mean(dat$DV[dat$IV=='A'])
+  } else if(dat$IV[x] =='B') {
+    dat$compMean[x] <- mean(dat$DV[dat$IV=='B'])
+  } else if (dat$IV[x] =='C') {
+    dat$compMean[x] <- mean(dat$DV[dat$IV=='C'])
   }
 }
 
@@ -386,7 +480,7 @@ dat$gmDevs <- round(dat$compMean-mean(dat$DV),2)
 dat$sqGMDevs <- round(dat$gmDevs^2, 2)
 
 SSmodelPlot + 
-  annotate(geom='text', label=dat$gmDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=3)
+  annotate(geom='text', label=dat$gmDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=5)
 
 ```
 ]
@@ -408,9 +502,9 @@ $MS_{model} = \frac{\color{#4CA384}{SS_{model}}}{df_{model}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSmodelPlot + 
-  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=3)
+  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=5)
 ```
 ]
 
@@ -434,10 +528,10 @@ $MS_{model} = \frac{\color{#4CA384}{`r sum(dat$sqGMDevs)`}}{df_{model}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSmodelPlot + 
-  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqGMDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqGMDevs)), x = 6, y = 8, size=5)
 ```
 ]
 
@@ -464,10 +558,10 @@ $MS_{model} = \frac{`r sum(dat$sqGMDevs)`}{\color{#4CA384}{2}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSmodelPlot + 
-  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqGMDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqGMDevs)), x = 6, y = 8, size=5)
 ```
 ]
 
@@ -494,10 +588,10 @@ $MS_{model} = \frac{`r sum(dat$sqGMDevs)`}{2}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSmodelPlot + 
-  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqGMDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqGMDevs, x=1:12+.5, y = dat$compMean-dat$gmDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqGMDevs)), x = 6, y = 8, size=5)
 ```
 ]
 
@@ -517,13 +611,13 @@ $MS_{residual} = \frac{\color{#4CA384}{SS_{residual}}}{df_{residual}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 
 dat$meanDevs <- round(dat$DV-dat$compMean,2)
 dat$sqDevs <- round(dat$meanDevs^2, 2)
 
 SSresidPlot + 
-  annotate(geom='text', label=dat$meanDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=3)
+  annotate(geom='text', label=dat$meanDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=5)
 
 ```
 
@@ -548,10 +642,10 @@ $MS_{residual} = \frac{\color{#4CA384}{SS_{residual}}}{df_{residual}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 
 SSresidPlot + 
-  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=3)
+  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=5)
 
 ```
 ]
@@ -576,10 +670,10 @@ $MS_{residual} = \frac{\color{#4CA384}{`r sum(dat$sqDevs)`}}{df_{residual}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSresidPlot + 
-  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8, size=5)
 ```
 ]
 
@@ -606,10 +700,10 @@ $MS_{residual} = \frac{`r sum(dat$sqDevs)`}{\color{#4CA384}{9}}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSresidPlot + 
-  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8, size=5)
 ```
 ]
 
@@ -636,10 +730,10 @@ $MS_{residual} = \frac{`r sum(dat$sqDevs)`}{9}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSresidPlot + 
-  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8, size=5)
 
 Fstat <- round((sum(dat$sqGMDevs)/2)/(sum(dat$sqDevs)/9), 2)
 ```
@@ -667,10 +761,10 @@ $MS_{residual} = \frac{`r sum(dat$sqDevs)`}{9}$
 
 .pull-right[
 
-```{r, echo = F, fig.height=4, fig.width = 4.5, warning = F}
+```{r, echo = F, fig.height=5, fig.width = 7, warning = F}
 SSresidPlot + 
-  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=3) +
-  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8)
+  annotate(geom='text', label=dat$sqDevs, x=1:12+.5, y = dat$DV-dat$meanDevs*.5, size=5) +
+  annotate(geom = 'text', label = paste('SS =', sum(dat$sqDevs)), x = 6, y = 8, size=5)
 ```
 ]
 
@@ -756,9 +850,9 @@ ggplot(data = data.frame(F = c(0, 5)), aes(x=F)) +
 
 --
 
-+ First, these are only conducted if the presence of an overall effect is detected.
++ First, posthoc tests are only evaluated if the presence of an overall effect is detected.
 
-+ Second, $p$-values are corrected so that the overall Type I error rate across all tests is still equal to the $\alpha$ threshold
++ Second, $p$-values may be adjusted so that the overall Type I error rate across all tests is still equal to the $\alpha$ threshold
 
 ---
 class: center, inverse, middle
@@ -813,7 +907,7 @@ aovDat <- data.frame(Group = c(rep('A', 50), rep('B', 50), rep('C', 50)),
 
 ggplot(aovDat, aes(Group, NS, fill = Group)) + geom_boxplot() +
   scale_fill_manual(values = c(baseColor, accent1, accent2)) +
-  labs(x = 'Indepedent Variable', y = 'Dependent Variable') +
+  labs(x = 'Independent Variable', y = 'Dependent Variable') +
   theme(legend.position = 'none',
         axis.text = element_text(size = 12),
         axis.title = element_text(size = 14, face = 'bold')) +
@@ -828,7 +922,7 @@ ggplot(aovDat, aes(Group, NS, fill = Group)) + geom_boxplot() +
 ```{r, echo = F, fig.height=3}
 ggplot(aovDat, aes(Group, s1, fill = Group)) + geom_boxplot() +
   scale_fill_manual(values = c(baseColor, accent1, accent2)) +
-  labs(x = 'Indepedent Variable', y = 'Dependent Variable') +
+  labs(x = 'Independent Variable', y = 'Dependent Variable') +
   theme(legend.position = 'none',
         axis.text = element_text(size = 12),
         axis.title = element_text(size = 14, face = 'bold')) +
@@ -837,7 +931,7 @@ ggplot(aovDat, aes(Group, s1, fill = Group)) + geom_boxplot() +
 
 ggplot(aovDat, aes(Group, s2, fill = Group)) + geom_boxplot() +
   scale_fill_manual(values = c(baseColor, accent1, accent2)) +
-  labs(x = 'Indepedent Variable', y = 'Dependent Variable') +
+  labs(x = 'Independent Variable', y = 'Dependent Variable') +
   theme(legend.position = 'none',
         axis.text = element_text(size = 12),
         axis.title = element_text(size = 14, face = 'bold')) +
@@ -848,7 +942,7 @@ ggplot(aovDat, aes(Group, s2, fill = Group)) + geom_boxplot() +
 ---
 ### Assumptions of ANOVA
 
-+ **Normality:** Dependent data should be normally distributed *within groups*
++ **Normality:** DV should be normally distributed *within groups*
 
 --
   
@@ -910,11 +1004,13 @@ class: middle, inverse, center
 
 **Step 1: State Your Hypotheses**
 
-**Research Question:** Does the type of auditory stimulus an infant is exposed to have an effect on their affect?
-
 **Independent Variable:** Auditory Stimulus (3 levels: Infant-directed Speech; Adult-directed Speech; Infant-directed Singing)
 
 **Dependent Variable:** Time until distressed
+
+>**Test Your Understanding:** What will your alternative hypothesis be? What will your null hypothesis be?
+
+--
 
 .pull-left[.center[<span style = "color: #18778C"> Null Hypothesis </span>
 $$\mu_{IDspeech} = \mu_{ADspeech} = \mu_{IDsinging}$$
@@ -934,7 +1030,7 @@ At least one $\mu \neq$ the other $\mu$s
 
 + [WebPower](https://webpower.psychstat.org/wiki/models/index)
 
-+ Let's check the sample required to achieve 80% power to detect a moderate effect ( $eta^2$ = .06) with $\alpha$ = .05.
++ Let's check the sample required to achieve 80% power to detect a moderate effect ( $\eta^2$ = .06) with $\alpha$ = .05.
 
 + Although we use $\eta^2$, Webpower requires the effect size to be entered as $f$, so you'll need to convert it using the following formula:
 
@@ -969,7 +1065,7 @@ $$f = \sqrt{\frac{\eta^2}{1-\eta^2}} = \sqrt{\frac{.06}{1-.06}} = .25$$
 
 + Homogeneity of Variance
  
-  + Check the results of Levene's Test
+  + Check residuals vs fitted values plot
   
 
 ---
@@ -1012,7 +1108,7 @@ Let's continue in SPSS...
 
 **Step 8: Report**
 
-We conducted a **One-Way ANOVA** to determine the effect of <span style = "color:#9AD079"> <b> auditory stimulus </span></b> on <span style = "color:#9AD079"> <b> an infant's affect</span></b>. The $\alpha$ threshold was set at .05 for all analyses. There was a significant effect of stimulus, <span style = "color:#18778C"><b> $F$(2, 57) = 5.99, $p$ = .004, $eta^2$ = .174, 95% CI = [.02, .33] </span></b>. Posthoc Tukey's tests indicated that infants listening to infant-directed singing displayed a positive or neutral affect significantly longer <span style = "color:#19424C"><b> ($M$ = 6.32, $SD$ = 2.27)</span></b> than infants listening to adult-directed speech <span style = "color:#19424C"><b> ($M$ = 4.36, $SD$ = 1.55)</span></b>, $p$ = .005, or infants listening to infant-directed speech <span style = "color:#19424C"><b>( $M$ = 4.78, $SD$ = 1.77)</span></b>, $p$ = .033. There was no significant difference in time of distress in infants listening to adult-directed speech and those listening to infant-directed speech, $p$ = .762. 
+We conducted a **One-Way ANOVA** to determine the effect of <span style = "color:#9AD079"> <b> auditory stimulus </span></b> on <span style = "color:#9AD079"> <b> an infant's affect</span></b>. The $\alpha$ threshold was set at .05 for all analyses. There was a significant effect of stimulus, <span style = "color:#18778C"><b> $F$(2, 57) = 5.99, $p$ = .004, $\eta^2$ = .174, 95% CI = [.02, .33] </span></b>. Posthoc Tukey's tests indicated that infants listening to infant-directed singing displayed a positive or neutral affect significantly longer <span style = "color:#19424C"><b> ($M$ = 6.32, $SD$ = 2.27)</span></b> than infants listening to adult-directed speech <span style = "color:#19424C"><b> ($M$ = 4.36, $SD$ = 1.55)</span></b>, $p$ = .005, or infants listening to infant-directed speech <span style = "color:#19424C"><b>( $M$ = 4.78, $SD$ = 1.77)</span></b>, $p$ = .033. There was no significant difference in time of distress in infants listening to adult-directed speech and those listening to infant-directed speech, $p$ = .762. 
 
 ---
 ### Running a One-way ANOVA
@@ -1075,7 +1171,7 @@ At least one $\mu \neq$ the other $\mu$s
 
 + [WebPower](https://webpower.psychstat.org/wiki/models/index)
 
-+ As before, let's check the sample required to achieve 80% power to detect a moderate effect ( $eta^2$ = .06) with $\alpha$ = .05.
++ As before, let's check the sample required to achieve 80% power to detect a moderate effect ( $\eta^2$ = .06) with $\alpha$ = .05.
 
 ---
 ### Running a Repeated-measures ANOVA
