--- a/Lectures/Week06_ANOVAII_lecture.Rmd
+++ b/Lectures/Week06_ANOVAII_lecture.Rmd
@@ -389,11 +389,12 @@ ggplot(facDat, aes(Pet, SWB, fill = Personality)) + geom_boxplot() +
 
 + The researcher wants to test for 3 possible effects:
 
-  + Is there an effect of facial coverage on expression recognition in children?
+  + Is there an effect of pet type(dog/cat/none) on subjective well-being?
   
-  + Is there an effect of stimulus ethnicity (in-group/out-group) on expression recognition in children?
+  + Is there an effect of personality(introvert/extrovert) on subjective well-being?
   
-  + Does the effect of facial coverage on expression recognition differ based on stimulus ethnicity?
+  + Does the effect of pet type on subjective well-being differ depending upon personality?
+  
 
 + All 3 effects can be tested with a single test.
 
